--- a/config/requirejs.yml
+++ b/config/requirejs.yml
@@ -1,2 +1,6 @@
 modules:
   - name: 'main'
+paths:
+  jquery: "http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min"
+  knockout: "http://cdnjs.cloudflare.com/ajax/libs/knockout/2.2.0/knockout-min"
+  bootstrap: "http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.1/bootstrap.min"
